<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_home">Home</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">FilmList</string>
    <string name="search_hint">Add a movie</string>
    <string name="action_search">RechercheAjout</string>

    <string-array name="navigation_array">
        <item>Vos films favoris</item>
        <item>Film à voir</item>
        <item>Liste complète de vos films</item>
        <item>Résultats de recherche</item>
        <item>A propos</item>
    </string-array>
    
	<string name="aboutText1">Une application créée par Sylvain BARDIN et Stéphane EINTRAZI</string>
	<string name="aboutText2">Have fun!</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="title_activity_apropos">About</string>
    <string name="title_activity_display_search_results">Search results</string>
    <string name="action_share">Share</string>
    <string name="title_activity_film_details">FilmDetails</string>
    <string name="title_activity_main">Main</string>
    
    <!-- FilmDetails -->
    <string name="image_text">Film cover</string>
    <string name="button_add_film_calendar">Add film to planning</string>
    <string name="button_add_film_favourite">Add film to favourites</string>
    <string name="button_remove_film_favourite">Remove film from favourites</string>
    <string name="button_delete_film">Delete film</string>
    
    <!--  Selection mode -->
    <string name="delete_text">Delete</string>
    <string name="share_text">Share</string>
    
    <string name="no_internet">No internet connection found. Try again later.</string>
</resources>
