<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
tools:context="com.example.filmlist.Home" >
	
    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_search"
           android:queryHint="@string/search_hint"
            android:inputType="phone"
          android:showAsAction="collapseActionView|ifRoom|withText"
          android:actionViewClass="android.widget.SearchView" 
          />
    
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:showAsAction="never" />


</menu>