<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.isen.android.filmlist.FilmDetails$PlaceholderFragment" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="146dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="98dp"
            android:layout_height="98dp"
            android:contentDescription="@string/image_text"
            android:src="@drawable/no_picture" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="146dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button_add_film_calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_add_film_calendar" />

            <Button
                android:id="@+id/button_add_film_favourites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_add_film_favourite" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignTop="@+id/linearLayout1"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="120dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ListView
                android:id="@+id/film_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>